# KT21Calculator

./: .gitignore  KT21Calculator.code-workspace  README.md  _Cargo.toml  asset-manifest.json  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml  test.yml
public/: index.html
src/: Ability.ts  App.test.tsx  App.tsx  Attacker.ts  CalcEngineCommon.test.ts  CalcEngineCommon.ts  CalcEngineFight.test.ts  CalcEngineFight.ts  CalcEngineFightInternal.ts  CalcEngineShoot.test.ts  CalcEngineShoot.ts  CalcEngineShootInternal.ts  CalculatorViewChoice.ts  Defender.ts  Die.ts  DieProbs.ts  FightChoice.ts  FightOptions.tsx  FightStrategy.ts  FighterState.ts  FinalDiceProb.ts  KT21CalcEngine.test.ts  KT21CalcEngine.ts  KtMisc.ts  Model.ts  NoCoverType.ts  Notes.ts  ShootOptions.tsx  Util.ts  index.tsx  types.ts
src/Deadzone/: CalcEngine.ts  CombatOptions.ts  Model.ts
src/DiceSim/: Cargo.toml
src/DiceSim/src/: lib.rs
src/DiceSim/src/common/: mod.rs  ts_types.rs
src/DiceSim/src/deadzone/: deadzone_model.rs  deadzone_options.rs  mod.rs  model.rs  options.rs  simulator.rs
src/WorldOfTanks/: CalcEngineWorldOfTanks.ts  CalcEngineWorldOfTanksInternal.ts  Reroll.ts  Tank.ts
src/components/: AppHeader.css  AppHeader.tsx  AttackControls.tsx  AttackerControls.tsx  CalcControls.tsx  Credits.tsx  DefenderControls.tsx  FightOptionControls.tsx  FightResultsDisplay.tsx  FightSection.tsx  FighterControls.tsx  IncDecSelect.tsx  MeleeSection.tsx  ResultsDisplay.tsx  ShootMassAnalysisSection.tsx  ShootOptionControls.tsx  ShootResultsDisplay.css  (+4 more)
(+43 files in other folders)
