[package]
name = "dice_sim"
version = "0.0.0"
edition = "2021"
authors = ["Jacob Egner <JacobEgner@example.com>"]
repository = "https://github.com/jmegner/KT21Calculator"
license = "unlicense"
description = "Monte Carlo dice simulator for damage calculations in skirmish games."

[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.66"
num = "0.4.1"
rand = "0.8.5"
wasm-bindgen = "0.2.89"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
